Enhance game listing with loading state and error handling in the UI

--- a/index.htm
+++ b/index.htm
@@ -372,23 +372,73 @@
             });
         }
 
+        // Функция для рендеринга одной игры
+        function renderGame(game) {
+            return `
+                <div class="bg-zinc-800/60 rounded-xl overflow-hidden flex flex-col border border-zinc-700/50">
+                    <div class="h-48 bg-zinc-700/50">
+                        ${game.image ? `<img src="${game.image}" alt="${game.title}" class="w-full h-full object-cover">` : ''}
+                    </div>
+                    <div class="p-4 space-y-3">
+                        <h3 class="text-lg font-medium">${game.title}</h3>
+                        <p class="text-sm text-zinc-400">${game.description || ''}</p>
+                        <button class="w-full mt-4 bg-emerald-500 hover:bg-emerald-600 text-white font-pixel py-2 px-4 rounded-md">
+                            Play Now
+                        </button>
+                    </div>
+                </div>
+            `;
+        }
+
+        // Функция для обновления списка игр
+        function updateGamesList(games) {
+            const gamesContainer = document.querySelector('.grid.grid-cols-1.md\\:grid-cols-2.lg\\:grid-cols-3.gap-6');
+            if (gamesContainer) {
+                gamesContainer.innerHTML = games.map(game => renderGame(game)).join('');
+            }
+        }
+
         // Универсальная функция для запроса и обновления списка игр
         function fetchGames(params = {}) {
             const url = new URL('/api/games', window.location.origin);
             Object.entries(params).forEach(([key, value]) => {
                 if (value) url.searchParams.set(key, value);
             });
+            
+            // Показываем состояние загрузки
+            const gamesContainer = document.querySelector('.grid.grid-cols-1.md\\:grid-cols-2.lg\\:grid-cols-3.gap-6');
+            if (gamesContainer) {
+                gamesContainer.innerHTML = `
+                    <div class="col-span-full flex justify-center items-center py-8">
+                        <div class="animate-spin rounded-full h-8 w-8 border-b-2 border-emerald-500"></div>
+                    </div>
+                `;
+            }
+
             fetch(url)
                 .then(res => res.json())
                 .then(data => {
-                    // Здесь обновите DOM с играми (data.games)
-                    // Например, вызовите функцию renderGames(data.games)
-                    console.log('Games data:', data);
+                    if (data.games && Array.isArray(data.games)) {
+                        updateGamesList(data.games);
+                    } else {
+                        console.error('Invalid games data received:', data);
+                    }
                 })
                 .catch(error => {
                     console.error('Error fetching games:', error);
+                    // Показываем сообщение об ошибке
+                    if (gamesContainer) {
+                        gamesContainer.innerHTML = `
+                            <div class="col-span-full text-center py-8 text-red-500">
+                                Error loading games. Please try again.
+                            </div>
+                        `;
+                    }
                 });
         }
+
+        // Загружаем игры при первой загрузке страницы
+        fetchGames();
     });
     </script>
 </body>
