Add filter, sort, and search functionality to community section in index.htm

--- a/index.htm
+++ b/index.htm
@@ -268,7 +268,29 @@
                     <div id="community-section" style="opacity:0;transform:translateY(20px)">
                         <h2 class="text-2xl font-bold mb-6 text-center font-pixel">from the trenches</h2>
                         <div class="bg-zinc-800/30 backdrop-blur-md rounded-xl p-4">
-                            
+                            <div class="flex flex-wrap gap-2 mb-4"><button
+                                    data-filter="featured"
+                                    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border hover:text-accent-foreground h-10 px-4 py-2 bg-white text-black border-transparent hover:bg-zinc-200 font-pixel">featured</button><button
+                                    data-filter="freshly_minted"
+                                    class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border h-10 px-4 py-2 bg-transparent text-zinc-400 border-zinc-700 hover:bg-zinc-700 hover:text-white font-pixel">freshly
+                                    minted</button>
+                                <div class="relative ml-auto"><input
+                                        class="flex rounded-md border px-3 py-2 ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm bg-transparent border-zinc-700 pl-9 h-9 w-48 text-sm"
+                                        placeholder="search games..."><svg xmlns="http://www.w3.org/2000/svg" width="24"
+                                        height="24" viewbox="0 0 24 24" fill="none" stroke="currentColor"
+                                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                                        class="lucide lucide-search absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-zinc-500">
+                                        <circle cx="11" cy="11" r="8"></circle>
+                                        <path d="m21 21-4.3-4.3"></path>
+                                    </svg></div>
+                                <div class="flex items-center gap-2 text-sm text-zinc-400"><span>sort:</span><button
+                                        data-sort="featured_at"
+                                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border px-4 py-2 h-9 bg-transparent border-zinc-700 text-zinc-400 hover:bg-zinc-700 hover:text-white font-pixel">featured
+                                        at ▼</button><button
+                                        data-sort="newest"
+                                        class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 border px-4 py-2 h-9 bg-transparent border-zinc-700 text-zinc-400 hover:bg-zinc-700 hover:text-white font-pixel">newest
+                                        ▼</button></div>
+                            </div>
                             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                                 <div
                                     class="bg-zinc-800/60 rounded-xl overflow-hidden flex flex-col border border-zinc-700/50">
