Update Twitter link in community section of index.htm

--- a/index.htm
+++ b/index.htm
@@ -122,7 +122,7 @@
                         </svg></div><span>leaderboard</span><span
                         class="ml-auto text-xs px-1.5 py-0.5 bg-emerald-500 text-white rounded-md">soon</span>
                 </a></nav>
-            <div class="mt-auto p-4 border-t border-zinc-800"><a href="https://x.com/@BuildOnGameit" target="_blank"
+            <div class="mt-auto p-4 border-t border-zinc-800"><a href="https://x.com/GameitToken" target="_blank"
                     rel="noopener noreferrer"
                     class="w-full flex items-center gap-3 px-4 py-2 mb-2 rounded-md text-zinc-400 hover:bg-zinc-800/80 hover:text-white font-pixel"><svg
                         aria-hidden="true" focusable="false" data-prefix="fab" data-icon="x-twitter"
