Update social media links and branding in index.htm

--- a/index.htm
+++ b/index.htm
@@ -124,14 +124,23 @@
                 </a></nav>
             <div class="mt-auto p-4 border-t border-zinc-800"><a href="https://x.com/GameitToken" target="_blank"
                     rel="noopener noreferrer"
-                    class="w-full flex items-center gap-3 px-4 py-2 mb-2 rounded-md text-zinc-400 hover:bg-zinc-800/80 hover:text-white font-pixel"><svg
-                        aria-hidden="true" focusable="false" data-prefix="fab" data-icon="x-twitter"
+                    class="w-full flex items-center gap-3 px-4 py-2 mb-2 rounded-md text-zinc-400 hover:bg-zinc-800/80 hover:text-white font-pixel">
+                    <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="x-twitter"
                         class="svg-inline--fa fa-x-twitter w-5 h-5" role="img" xmlns="http://www.w3.org/2000/svg"
-                        viewbox="0 0 512 512">
+                        viewBox="0 0 512 512">
                         <path fill="currentColor"
                             d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z">
                         </path>
-                    </svg><span>@BuildOnGameit</span></a>
+                    </svg>
+                    <span>@GameItToken</span>
+                </a>
+                <a href="https://t.me/GameItToken" target="_blank" rel="noopener noreferrer"
+                    class="w-full flex items-center gap-3 px-4 py-2 mb-2 rounded-md text-zinc-400 hover:bg-zinc-800/80 hover:text-white font-pixel">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="w-5 h-5" viewBox="0 0 24 24">
+                        <path d="M9.993 15.674l-.39 4.13c.56 0 .803-.24 1.096-.527l2.63-2.497 5.454 3.98c1 .552 1.72.262 1.97-.92l3.57-16.7c.326-1.51-.547-2.1-1.52-1.74l-21.3 8.2c-1.45.56-1.43 1.36-.25 1.72l5.44 1.7 12.63-7.97c.59-.38 1.13-.17.69.24"/>
+                    </svg>
+                    <span>@GameItToken</span>
+                </a>
                 <p class="text-xs text-zinc-500">gameit is not affiliated with or endorsed by any game company.</p>
             </div>
         </div>
