Update logo references in index.htm to use dex_logo.png

--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="preload" as="image" href="logo.png">
+    <link rel="preload" as="image" href="dex_logo.png">
     <link rel="stylesheet" href="_next/static/css/ecc05e090a8b70fb.css?dpl=dpl_9DdztR9Dj5gv3E8Yhbuh6JfgoRLu"
         data-precedence="next">
     <link rel="stylesheet" href="_next/static/css/b9b8e622f4c4d397.css?dpl=dpl_9DdztR9Dj5gv3E8Yhbuh6JfgoRLu"
@@ -62,7 +62,7 @@
         </div>
         <div class="border-r border-zinc-800 flex flex-col fixed top-0 left-0 z-20 bg-[#121212]/90 backdrop-blur-md h-screen"
             style="width:260px;opacity:1">
-            <div class="p-4 flex items-center gap-2"><img src="logo.png" alt="Gameit Logo"
+            <div class="p-4 flex items-center gap-2"><img src="dex_logo.png" alt="Gameit Logo"
                     class="object-contain w-8 h-8 rounded-md"><span
                     class="font-pixel text-xl tracking-tight">gameit</span><span
                     class="text-xs px-2 py-0.5 bg-zinc-800 rounded-full ml-auto">alpha</span></div>
@@ -92,7 +92,7 @@
                             <path d="M18.09 10.37A6 6 0 1 1 10.34 18"></path>
                             <path d="M7 6h1v4"></path>
                             <path d="m16.71 13.88.7.71-2.82 2.82"></path>
-                        </svg></div><span>tokens</span><span class="ml-auto text-xs text-emerald-400">new</span>
+                        </svg></div><span>top tokens</span><span class="ml-auto text-xs text-emerald-400">new</span>
                 </a><a
                     class="flex items-center gap-3 px-4 py-2 mb-1 rounded-md mx-2 text-zinc-400 hover:bg-zinc-800/80 hover:text-white"
                     href="my-games.html">
