Replace Dexscreener SVG with logo image in index.htm

--- a/index.htm
+++ b/index.htm
@@ -122,8 +122,7 @@
                         </svg></div><span>leaderboard</span><span
                         class="ml-auto text-xs px-1.5 py-0.5 bg-emerald-500 text-white rounded-md">soon</span>
                 </a></nav>
-            <div class="mt-auto p-4 border-t border-zinc-800"><a href="https://x.com/GameitToken" target="_blank"
-                    rel="noopener noreferrer"
+            <div class="mt-auto p-4 border-t border-zinc-800"><a href="https://x.com/GameitToken" target="_blank" rel="noopener noreferrer"
                     class="w-full flex items-center gap-3 px-4 py-2 mb-2 rounded-md text-zinc-400 hover:bg-zinc-800/80 hover:text-white font-pixel">
                     <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="x-twitter"
                         class="svg-inline--fa fa-x-twitter w-5 h-5" role="img" xmlns="http://www.w3.org/2000/svg"
@@ -143,9 +142,7 @@
                 </a>
                 <a href="https://dexscreener.com/solana/h7puzizjrvxalfz5xvgvbrsxvwvzvhwln1yc8ncu7ykr" target="_blank" rel="noopener noreferrer"
                     class="w-full flex items-center gap-3 px-4 py-2 mb-2 rounded-md text-zinc-400 hover:bg-zinc-800/80 hover:text-white font-pixel">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="w-5 h-5" viewBox="0 0 24 24">
-                        <path d="M21 21H3V3h18v18zm-2-2V5H5v14h14zm-7-3a5 5 0 100-10 5 5 0 000 10zm0-2a3 3 0 110-6 3 3 0 010 6z"/>
-                    </svg>
+                    <img src="dex_logo.png" alt="Dexscreener" class="w-5 h-5">
                     <span>Dexscreener</span>
                 </a>
                 <p class="text-xs text-zinc-500">gameit is not affiliated with or endorsed by any game company.</p>
