Hide flex container with gap in index.htm

--- a/index.htm
+++ b/index.htm
@@ -18,6 +18,7 @@
             font-style: normal;
             font-display: swap;
         }
+        .flex.flex-wrap.gap-2.mb-4 { display: none !important; }
     </style>
     <script src="_next/static/chunks/7a38de25-7b3db2cdcf7ecebd.js?dpl=dpl_9DdztR9Dj5gv3E8Yhbuh6JfgoRLu"
         async=""></script>
