--- a/index.htm
+++ b/index.htm
@@ -19,6 +19,7 @@
             font-display: swap;
         }
         .flex.flex-wrap.gap-2.mb-4 { display: none !important; }
+        .text-xs.px-2.py-0\.5.bg-zinc-800.rounded-full.ml-auto { display: none !important; }
     </style>
     <script src="_next/static/chunks/7a38de25-7b3db2cdcf7ecebd.js?dpl=dpl_9DdztR9Dj5gv3E8Yhbuh6JfgoRLu"
         async=""></script>
