Hide additional inline flex container in index.htm

--- a/index.htm
+++ b/index.htm
@@ -21,6 +21,7 @@
         .flex.flex-wrap.gap-2.mb-4 { display: none !important; }
         .text-xs.px-2.py-0\.5.bg-zinc-800.rounded-full.ml-auto { display: none !important; }
         .flex.flex-wrap.gap-2.justify-center.mb-16 { display: none !important; }
+        .inline-flex.items-center.gap-2.whitespace-nowrap.rounded-md.text-sm.font-medium.ring-offset-background.transition-colors.focus-visible\:outline-none.focus-visible\:ring-2.focus-visible\:ring-ring.focus-visible\:ring-offset-2.disabled\:pointer-events-none.disabled\:opacity-50.\[\&_svg\]\:pointer-events-none.\[\&_svg\]\:size-4.\[\&_svg\]\:shrink-0.h-10.px-4.py-2.w-full.justify-between.bg-zinc-800\/80.hover\:bg-zinc-700.text-white.font-pixel { display: none !important; }
     </style>
     <script src="_next/static/chunks/7a38de25-7b3db2cdcf7ecebd.js?dpl=dpl_9DdztR9Dj5gv3E8Yhbuh6JfgoRLu"
         async=""></script>
