--- a/index.htm
+++ b/index.htm
@@ -22,7 +22,6 @@
         .text-xs.px-2.py-0\.5.bg-zinc-800.rounded-full.ml-auto { display: none !important; }
         .flex.flex-wrap.gap-2.justify-center.mb-16 { display: none !important; }
         .inline-flex.items-center.gap-2.whitespace-nowrap.rounded-md.text-sm.font-medium.ring-offset-background.transition-colors.focus-visible\:outline-none.focus-visible\:ring-2.focus-visible\:ring-ring.focus-visible\:ring-offset-2.disabled\:pointer-events-none.disabled\:opacity-50.\[\&_svg\]\:pointer-events-none.\[\&_svg\]\:size-4.\[\&_svg\]\:shrink-0.h-10.px-4.py-2.w-full.justify-between.bg-zinc-800\/80.hover\:bg-zinc-700.text-white.font-pixel { display: none !important; }
-        a[href="my-games.html"] { display: none !important; }
     </style>
     <script src="_next/static/chunks/7a38de25-7b3db2cdcf7ecebd.js?dpl=dpl_9DdztR9Dj5gv3E8Yhbuh6JfgoRLu"
         async=""></script>
@@ -98,6 +97,19 @@
                             <path d="M7 6h1v4"></path>
                             <path d="m16.71 13.88.7.71-2.82 2.82"></path>
                         </svg></div><span>top tokens</span><span class="ml-auto text-xs text-emerald-400">new</span>
+                </a><a
+                    class="flex items-center gap-3 px-4 py-2 mb-1 rounded-md mx-2 text-zinc-400 hover:bg-zinc-800/80 hover:text-white"
+                    href="my-games.html" style="display: none !important;">
+                    <div class="w-5 h-5 flex items-center justify-center"><svg xmlns="http://www.w3.org/2000/svg"
+                            width="18" height="18" viewbox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                            class="lucide lucide-gamepad">
+                            <line x1="6" x2="10" y1="12" y2="12"></line>
+                            <line x1="8" x2="8" y1="10" y2="14"></line>
+                            <line x1="15" x2="15.01" y1="13" y2="13"></line>
+                            <line x1="18" x2="18.01" y1="11" y2="11"></line>
+                            <rect width="20" height="12" x="2" y="6" rx="2"></rect>
+                        </svg></div><span>my games</span>
                 </a><a
                     class="flex items-center gap-3 px-4 py-2 mb-1 rounded-md mx-2 text-zinc-400 hover:bg-zinc-800/80 hover:text-white"
                     href="#">
