Rename "my games" link to "games" in index.htm

--- a/index.htm
+++ b/index.htm
@@ -109,7 +109,7 @@
                             <line x1="15" x2="15.01" y1="13" y2="13"></line>
                             <line x1="18" x2="18.01" y1="11" y2="11"></line>
                             <rect width="20" height="12" x="2" y="6" rx="2"></rect>
-                        </svg></div><span>my games</span>
+                        </svg></div><span>games</span>
                 </a><a
                     class="flex items-center gap-3 px-4 py-2 mb-1 rounded-md mx-2 text-zinc-400 hover:bg-zinc-800/80 hover:text-white"
                     href="#">
