--- a/index.htm
+++ b/index.htm
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="preload" as="image" href="site_logo.png">
     <link rel="stylesheet" href="_next/static/css/ecc05e090a8b70fb.css?dpl=dpl_9DdztR9Dj5gv3E8Yhbuh6JfgoRLu"
         data-precedence="next">
@@ -22,6 +22,71 @@
         .text-xs.px-2.py-0\.5.bg-zinc-800.rounded-full.ml-auto { display: none !important; }
         .flex.flex-wrap.gap-2.justify-center.mb-16 { display: none !important; }
         .inline-flex.items-center.gap-2.whitespace-nowrap.rounded-md.text-sm.font-medium.ring-offset-background.transition-colors.focus-visible\:outline-none.focus-visible\:ring-2.focus-visible\:ring-ring.focus-visible\:ring-offset-2.disabled\:pointer-events-none.disabled\:opacity-50.\[\&_svg\]\:pointer-events-none.\[\&_svg\]\:size-4.\[\&_svg\]\:shrink-0.h-10.px-4.py-2.w-full.justify-between.bg-zinc-800\/80.hover\:bg-zinc-700.text-white.font-pixel { display: none !important; }
+        @media (max-width: 768px) {
+            .flex.min-h-screen {
+                flex-direction: column !important;
+                margin-left: 0 !important;
+            }
+            .border-r.border-zinc-800.fixed {
+                position: static !important;
+                width: 100% !important;
+                height: auto !important;
+                border-right: none !important;
+                border-bottom: 1px solid #27272a !important;
+                z-index: 10 !important;
+            }
+            .flex-1.flex.flex-col.relative.z-10.transition-all.duration-300.ease-in-out {
+                margin-left: 0 !important;
+            }
+            header.h-14 {
+                padding-left: 1rem !important;
+                padding-right: 1rem !important;
+            }
+            main.flex-1 {
+                padding: 1rem !important;
+            }
+            .max-w-3xl, .mx-auto, .p-8 {
+                max-width: 100% !important;
+                padding-left: 0 !important;
+                padding-right: 0 !important;
+            }
+            .grid {
+                grid-template-columns: 1fr !important;
+            }
+            .rounded-xl, .rounded-lg, .rounded-md {
+                border-radius: 12px !important;
+            }
+            .overflow-auto, .overflow-hidden {
+                overflow-x: hidden !important;
+            }
+            .p-4, .p-6, .p-3 {
+                padding: 1rem !important;
+            }
+            .h-14, .h-40, .h-48, .h-64, .h-8, .h-10 {
+                height: auto !important;
+                min-height: 44px !important;
+            }
+            .w-8, .w-10, .w-5, .w-2 {
+                width: auto !important;
+                min-width: 32px !important;
+            }
+            .text-4xl, .text-2xl, .text-xl, .text-lg {
+                font-size: 1.2rem !important;
+            }
+            .font-pixel {
+                font-size: 1rem !important;
+            }
+            .gap-2, .gap-3, .gap-4, .gap-6, .gap-8 {
+                gap: 0.5rem !important;
+            }
+            .mb-8, .mb-16, .mb-6, .mb-4, .mb-3 {
+                margin-bottom: 1rem !important;
+            }
+            .ml-3, .ml-auto, .mr-3, .mr-4 {
+                margin-left: 0 !important;
+                margin-right: 0 !important;
+            }
+        }
     </style>
     <script src="_next/static/chunks/7a38de25-7b3db2cdcf7ecebd.js?dpl=dpl_9DdztR9Dj5gv3E8Yhbuh6JfgoRLu"
         async=""></script>
