--- a/tokens.html
+++ b/tokens.html
@@ -69,12 +69,17 @@
           margin-left: 0 !important;
         }
         .border-r.border-zinc-800.fixed {
-          position: static !important;
-          width: 100% !important;
-          height: auto !important;
-          border-right: none !important;
-          border-bottom: 1px solid #27272a !important;
-          z-index: 10 !important;
+          position: fixed !important;
+          width: 260px !important;
+          height: 100vh !important;
+          border-right: 1px solid #27272a !important;
+          border-bottom: none !important;
+          z-index: 50 !important;
+          transform: translateX(-100%);
+          transition: transform 0.3s ease-in-out;
+        }
+        .border-r.border-zinc-800.fixed[style*="width:260px"] {
+          transform: translateX(0);
         }
         .flex-1.flex.flex-col.relative.z-10.transition-all.duration-300.ease-in-out {
           margin-left: 0 !important;
