--- a/tokens.html
+++ b/tokens.html
@@ -85,8 +85,26 @@
           margin-left: 0 !important;
         }
         header.h-14 {
-          padding-left: 1rem !important;
-          padding-right: 1rem !important;
+          flex-wrap: wrap !important;
+          flex-direction: column !important;
+          align-items: flex-start !important;
+          height: auto !important;
+          min-height: 44px !important;
+          padding: 8px 8px !important;
+          gap: 8px !important;
+        }
+        header.h-14 > div {
+          width: 100% !important;
+          justify-content: flex-start !important;
+          gap: 8px !important;
+          flex-wrap: wrap !important;
+        }
+        .font-pixel, .text-sm, .text-base {
+          font-size: 1rem !important;
+        }
+        .ml-3, .ml-auto, .mr-3, .mr-4 {
+          margin-left: 0 !important;
+          margin-right: 0 !important;
         }
         main.flex-1 {
           padding: 1rem !important;
@@ -127,10 +145,6 @@
         }
         .mb-8, .mb-16, .mb-6, .mb-4, .mb-3 {
           margin-bottom: 1rem !important;
-        }
-        .ml-3, .ml-auto, .mr-3, .mr-4 {
-          margin-left: 0 !important;
-          margin-right: 0 !important;
         }
       }
     </style>
