Enhance sidebar overlay styles with !important for consistent display behavior

--- a/index.htm
+++ b/index.htm
@@ -106,13 +106,13 @@
                 transform: translateX(0);
             }
             .sidebar-overlay {
-                display: none;
-                position: fixed; inset: 0;
-                background: rgba(0,0,0,0.5);
-                z-index: 49;
+                display: none !important;
+                position: fixed; inset: 0 !important;
+                background: rgba(0,0,0,0.5) !important;
+                z-index: 49 !important;
             }
             .sidebar-overlay.active {
-                display: block;
+                display: block !important;
             }
         }
     </style>
