--- a/tokens.html
+++ b/tokens.html
@@ -147,6 +147,33 @@
           margin-bottom: 1rem !important;
         }
       }
+      @media (max-width: 768px) {
+        #sidebar {
+          position: fixed !important;
+          left: 0 !important; top: 0 !important; bottom: 0 !important;
+          width: 260px !important;
+          height: 100vh !important;
+          background: #121212 !important;
+          z-index: 100 !important;
+          transform: translateX(-100%) !important;
+          transition: transform 0.3s !important;
+          will-change: transform;
+          display: flex !important;
+          flex-direction: column !important;
+        }
+        #sidebar.open {
+          transform: translateX(0) !important;
+        }
+        .sidebar-overlay {
+          display: none;
+          position: fixed; inset: 0;
+          background: rgba(0,0,0,0.5);
+          z-index: 99;
+        }
+        .sidebar-overlay.active {
+          display: block;
+        }
+      }
     </style>
 </head>
 
@@ -1497,7 +1524,7 @@
         display: none;
         position: fixed; inset: 0;
         background: rgba(0,0,0,0.5);
-        z-index: 49;
+        z-index: 99;
       }
       .sidebar-overlay.active {
         display: block;
