--- a/index.htm
+++ b/index.htm
@@ -257,6 +257,7 @@
                 <p class="text-xs text-zinc-500">gameit is not affiliated with or endorsed by any game company.</p>
             </div>
         </div>
+        <div id="sidebarOverlay" class="sidebar-overlay"></div>
         <div class="flex-1 flex flex-col relative z-10 transition-all duration-300 ease-in-out ml-[260px]">
             <header
                 class="h-14 border-b border-zinc-800 flex items-center justify-between px-6 bg-[#121212]/80 backdrop-blur-md">
