Update page titles and descriptions for improved branding and SEO

--- a/index.htm
+++ b/index.htm
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="_next/static/css/b9b8e622f4c4d397.css?dpl=dpl_9DdztR9Dj5gv3E8Yhbuh6JfgoRLu"
         data-precedence="next">
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js" as="script">
+    <title>Gameit - Create. Play. Earn.</title>
+    <meta name="description" content="If you're a real gamer — builder, dreamer, grinder — you're in the right place">
+    <meta property="og:title" content="Gameit - Create. Play. Earn.">
+    <meta property="og:description" content="If you're a real gamer — builder, dreamer, grinder — you're in the right place">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="/site_logo.png">
+    <meta property="og:url" content="https://gameit.app/">
     <style>
         @font-face {
             font-family: 'ABCDiatypePixel';
@@ -253,7 +260,7 @@
                     <img src="site_logo.png" alt="Dexscreener" class="w-5 h-5">
                     <span>Dexscreener</span>
                 </a>
-                <p class="text-xs text-zinc-500">gameit is not affiliated with or endorsed by any game company.</p>
+                <p class="text-xs text-zinc-500">Create. Play. Earn.</p>
             </div>
         </div>
         <div id="sidebarOverlay" class="sidebar-overlay"></div>
