--- a/index.htm
+++ b/index.htm
@@ -188,8 +188,15 @@
             <div style="position:absolute;inset:0;background-size:20px 20px;background-image:repeating-linear-gradient(45deg, rgba(255,255,255,0.07) 0, rgba(255,255,255,0.07) 2px, transparent 2px, transparent 8px);animation:patternMove 10s linear infinite;z-index:1;opacity:0.5"
                 class="jsx-afea1927bc347052"></div>
         </div>
-        <div id="sidebar" class="border-r border-zinc-800 flex flex-col fixed top-0 left-0 z-20 bg-[#121212]/90 backdrop-blur-md h-screen"
-            style="width:260px;opacity:1">
+        <div id="sidebar" class="border-r border-zinc-800 flex flex-col fixed top-0 left-0 z-20 bg-[#121212]/90 backdrop-blur-md h-screen block md:hidden" style="width:260px;opacity:1">
+            <button id="closeSidebar"
+                class="absolute top-4 right-4 z-30 inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent h-8 w-8 text-zinc-400 hover:text-white block md:hidden"
+                aria-label="Закрыть">
+                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-x">
+                    <path d="M18 6 6 18"></path>
+                    <path d="m6 6 12 12"></path>
+                </svg>
+            </button>
             <div class="p-4 flex items-center gap-2"><img src="site_logo.png" alt="Gameit Logo"
                     class="object-contain w-8 h-8 rounded-md"><span
                     class="font-pixel text-xl tracking-tight">gameit</span><span
@@ -546,6 +553,26 @@
             };
         }
     });
+    </script>
+    <script>
+    const burger = document.getElementById('burger');
+    const sidebar = document.getElementById('sidebar');
+    const closeSidebar = document.getElementById('closeSidebar');
+
+    function openSidebar() {
+        sidebar.style.display = 'block';
+    }
+    function hideSidebar() {
+        sidebar.style.display = 'none';
+    }
+
+    burger && burger.addEventListener('click', openSidebar);
+    closeSidebar && closeSidebar.addEventListener('click', hideSidebar);
+
+    // По умолчанию скрываем сайдбар на мобильных
+    if (window.innerWidth < 768) {
+        sidebar.style.display = 'none';
+    }
     </script>
 </body>
 
